--- a/index.html
+++ b/index.html
@@ -1,15 +1,97 @@
-<!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Lunar Orbital Oasis Programme</title>
-    <link rel="stylesheet" href="styles.css">
+    <style>
+        body {
+            background-image: url("space.jpg");
+            background-size: cover;
+            color: white;
+            font-family: Arial, sans-serif;
+        }
+
+        h1 {
+            text-align: center;
+            margin-top: 50px;
+        }
+
+        p {
+            text-align: justify;
+            margin: 20px 100px;
+        }
+
+        .popup {
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            width: 600px;
+            height: 800px;
+            border: 5px solid white;
+            border-radius: 10px;
+            background-color: white;
+            box-shadow: 0 0 10px black;
+            overflow: hidden;
+        }
+
+        .popup-header {
+            display: flex;
+            align-items: center;
+            justify-content: space-between;
+            padding: 10px;
+            background-color: #f0f0f0;
+        }
+
+        .popup-header img {
+            width: 50px;
+            height: 50px;
+        }
+
+        .popup-header span {
+            font-weight: bold;
+            font-size: 20px;
+        }
+
+        .popup-header button {
+            width: 30px;
+            height: 30px;
+            border: none;
+            border-radius: 50%;
+            background-color: red;
+            color: white;
+            font-weight: bold;
+            cursor: pointer;
+        }
+
+        .popup-content {
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            height: 100%;
+        }
+
+        .popup-content iframe {
+            width: 90%;
+            height: 90%;
+            border: none;
+        }
+    </style>
 </head>
 <body>
-    <div class="page-1">
-        <img src="first_page.png" alt="Lunar Orbital Oasis Programme">
+    <h1>Welcome to the Lunar Orbital Oasis Programme</h1>
+    <p>Embark on an extraordinary journey to establish sustainable life on the moon. Join us as we build dome-like structures for food production and an extraordinary mothership for habitation, creating a thriving lunar oasis.</p>
+    <div class="popup">
+        <div class="popup-header">
+            <img src="pdf-icon.png" alt="PDF icon">
+            <span>Final_-_Project_Loop_2.pdf</span>
+            <button onclick="closePopup()">X</button>
+        </div>
+        <div class="popup-content">
+            <iframe src="Final_-_Project_Loop_2.pdf"></iframe>
+        </div>
     </div>
-    <!-- Add your content here -->
+    <script>
+        function closePopup() {
+            document.querySelector(".popup").style.display = "none";
+        }
+    </script>
 </body>
 </html>
