--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <head>
     <style>
         body {
-            background-image: url("space.jpg");
+            background-image: url("first_page.png");
             background-size: cover;
             color: white;
             font-family: Arial, sans-serif;
